# CERN_RobotronicsDepartment

BenchMark_Testsuite/: gcc compiler for logs
BenchMark_Testsuite/boostLog_Benchmark/: CMakeLists.txt  Logs.txt  LoopTest.cpp  demo  main.cpp
BenchMark_Testsuite/easylogging_Benchmark/: Logs.txt  LoopTest.cpp  demo  easylogging++.cc  main.cpp
BenchMark_Testsuite/loguru_Benchmark/: Logs.txt  LoopTest.cpp  demo  main.cpp
BenchMark_Testsuite/p7log_Benchmark/: main.cpp
BenchMark_Testsuite/p7log_Benchmark/P7/Examples/Cpp/: CMakeLists.txt  Main.cpp
BenchMark_Testsuite/p7log_Benchmark/P7/Sources/_build_/: CMakeCache.txt  Makefile  cmake_install.cmake
BenchMark_Testsuite/p7log_Benchmark/P7/Tests/: CMakeCache.txt  Makefile  cmake_install.cmake
BenchMark_Testsuite/p7log_Benchmark/P7/Tests/Speed/: CMakeLists.txt  Speed.cpp
BenchMark_Testsuite/plog_Benchmark/: Logs.txt  LoopTest.cpp  demo  main.cpp
BenchMark_Testsuite/pocologger_Benchmark/: Logs.txt  LoopTest.cpp  demo  fast.sh  main.cpp
BenchMark_Testsuite/spdlog_Benchmark/: Logs.txt  LoopTest.cpp  demo  loopdemo  main.cpp
InfluxDatalogger/: main  main.cpp
InfluxDatalogger/include/: ICartesianPosition.hpp  IJointPosition.hpp  InfluxDBFactory.hpp  KinovaCartesianPosition.hpp  KinovaInfluxDBFactory.hpp  KinovaJointPosition.hpp  SchunkCartesianPosition.hpp  SchunkJointPosition.hpp  ShunckInfluxDBFactory.hpp
InfluxDatalogger/src/: Client.cpp  KinovaCartesianPosition.cpp  KinovaJointPosition.cpp  SchunkCartesianPosition.cpp  SchunkJointPosition.cpp
(+3 files in other folders)
